--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
     "axios": "^0.19.0",
+    "material-ui-flat-pagination": "^3.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-icons": "^3.7.0",
+    "react-paginate": "^6.3.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
